--- a/plutus-use-cases/ARCHITECTURE.adoc
+++ b/plutus-use-cases/ARCHITECTURE.adoc
@@ -26,3 +26,7 @@ The following contracts are implemented:
 The test suite includes unit tests for all contracts.
 
 There is also an executable `plutus-use-cases-scripts` writes out the applied validator scripts from all test cases in `plutus-use-cases` to a folder.
+
+=== `plutus-use-cases-scripts`
+
+A tool that extracts applied validators and partial transactions from unit tests
